# NewsFilter

./: .env  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  Jenkinsfile.architecture  README.md  newsfilter.toml  pyproject.toml  requirements.txt
.llmbox/: docker-compose.yml
data/: prompt.txt
docs/architecture/: SEED-NOTES.md  architecture.yaml
newsfilter/: __init__.py  __main__.py  app.py  cli.py  loader.py  poster.py  scorelogger.py  scorer.py  telegram.py  utils.py
scripts/: arch-validate.py  args.sh
tests/: test_score.py  test_utils.py
