[tool.poetry]
name = "newsfilter"
version = "0.1.0"
description = "Filters news using ChatGPT."
authors = ["Pieter van Ginkel <pvginkel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pvginkel/NewsFilter"
packages = [{ include = "newsfilter" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
feedparser = "*"
dataclasses-json = "*"
tweepy = "*"
standard-imghdr = "*"
beautifulsoup4 = "*"
PyYAML = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
newsfilter = "newsfilter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
